statefullset/stable-network-id/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: application
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: application
  serviceName: application-headless
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: nginx:1.23
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: html-template
          configMap:
            name: nginx-template
  volumeClaimTemplates:
  - metadata:
      name: html
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: nfs-client
      resources:
        requests:
          storage: 10Mi
